Fix choose-tree usage.

--- a/tmux.1
+++ b/tmux.1
@@ -1129,9 +1129,7 @@ section.
 This command works only if at least one client is attached.
 .It Xo
 .Ic choose-tree
-.Op Fl s
-.Op Fl w
-.Op Fl u
+.Op Fl suw
 .Op Fl b Ar session-template
 .Op Fl c Ar window-template
 .Op Fl S Ar format
