Don't use a target-client for stdout, just always cmdclient.

--- a/tmux.1
+++ b/tmux.1
@@ -1042,7 +1042,6 @@ but a different format may be specified with
 .It Xo Ic capture-pane
 .Op Fl p
 .Op Fl b Ar buffer-index
-.Op Fl c Ar target-client
 .Op Fl E Ar end-line
 .Op Fl S Ar start-line
 .Op Fl t Ar target-pane
@@ -1051,9 +1050,7 @@ but a different format may be specified with
 Capture the contents of a pane.
 If
 .Fl p
-is given, the output goes to
-.Ar target-client
-stdout, otherwise to the buffer specified with
+is given, the output goes to stdout, otherwise to the buffer specified with
 .Fl b
 or a new buffer if omitted.
 .Pp
