Add -e flag to capture-pane to include embedded ANSI SGR escape sequences, from George Nachman.

--- a/tmux.1
+++ b/tmux.1
@@ -1040,6 +1040,7 @@ By default, it uses the format
 but a different format may be specified with
 .Fl F .
 .It Xo Ic capture-pane
+.Op Fl e
 .Op Fl p
 .Op Fl b Ar buffer-index
 .Op Fl E Ar end-line
@@ -1053,6 +1054,9 @@ If
 is given, the output goes to stdout, otherwise to the buffer specified with
 .Fl b
 or a new buffer if omitted.
+If
+.Fl e
+is given, the output includes escape sequences for text and background attributes.
 .Pp
 .Fl S
 and
