Move NOTES->README, move Vim syntax file documentation to the file itself and otherwise tweak some bits.

--- a/README
+++ b/README
@@ -16,15 +16,16 @@ To build tmux from a release tarball, do:
 	$ ./configure && make
 	$ sudo make install
 
-To get and build the latest version control checkout:
+To get and build the latest from version control:
 
-	$ git clone git://tmux.git.sourceforge.net/gitroot/tmux/tmux
+	$ git clone git://git.code.sf.net/p/tmux/tmux-code tmux
 	$ cd tmux
 	$ sh autogen.sh
 	$ ./configure && make
 
 For more information see https://sourceforge.net/scm/?type=git&group_id=200378
-and http://git-scm.com.
+and http://git-scm.com. Patches should be sent by email to the mailing list at
+tmux-users@lists.sourceforge.net.
 
 For documentation on using tmux, see the tmux.1 manpage. It can be viewed from
 the source tree with:
@@ -34,20 +35,8 @@ the source tree with:
 Some common questions are answered in the FAQ file and a more extensive (but
 slightly out of date) guide is available in the OpenBSD FAQ at
 http://www.openbsd.org/faq/faq7.html#tmux. A rough todo list is in the TODO
-file.
-
-A Vim syntax file is available in the examples directory. To install it:
-
-- Drop the file in the syntax directory into runtimepath (such as
-  ~/.vim/syntax/tmux.vim).
-- Make the filetype recognisable by adding the following to filetype.vim
-  (~/.vim/filetype.vim):
-
-	augroup filetypedetect
-		au BufNewFile,BufRead .tmux.conf*,tmux.conf* setf tmux
-	augroup END
-
-- Switch on syntax highlighting by adding "syntax enable" to .vimrc.
+file and some example configurations and a Vim syntax file are in the examples
+directory.
 
 For debugging, running tmux with -v or -vv will generate server and client log
 files in the current directory.
@@ -64,8 +53,7 @@ welcome. Please send by email to:
 This file and the CHANGES, FAQ and TODO files are licensed under the ISC
 license. Files under examples/ remain copyright their authors unless otherwise
 stated in the file but permission has been received to distribute them with
-tmux. All other files have a license and copyright notice at their
-start.
+tmux. All other files have a license and copyright notice at their start.
 
 -- Nicholas Marriott <nicm@users.sf.net>
 
