--- a/tmux.1
+++ b/tmux.1
@@ -3020,6 +3020,7 @@ The following variables are available, where appropriate:
 .It Li "mouse_standard_flag" Ta "Pane mouse standard flag"
 .It Li "mouse_utf8_flag" Ta "Pane mouse UTF-8 flag"
 .It Li "pane_active" Ta "1 if active pane"
+.It Li "pane_current_command" Ta "Current command if available"
 .It Li "pane_current_path" Ta "Current path if available"
 .It Li "pane_dead" Ta "1 if pane is dead"
 .It Li "pane_height" Ta "Height of pane"
