Add pane_tags format to format_window_pane based on code from George Nachman.

--- a/tmux.1
+++ b/tmux.1
@@ -3037,6 +3037,7 @@ The following variables are available, where appropriate:
 .It Li "pane_pid" Ta "PID of first process in pane"
 .It Li "pane_start_command" Ta "Command pane started with"
 .It Li "pane_start_path" Ta "Path pane started with"
+.It Li "pane_tabs" Ta "Pane tab positions"
 .It Li "pane_title" Ta "Title of pane"
 .It Li "pane_tty" Ta "Pseudo terminal of pane"
 .It Li "pane_width" Ta "Width of pane"
