Preserve trailing spaces with capture-pane -J, from George Nachman.

--- a/tmux.1
+++ b/tmux.1
@@ -1092,7 +1092,7 @@ attributes.
 .Fl C
 also escapes non-printable characters as octal \\xxx.
 .Fl J
-joins wrapped lines.
+joins wrapped lines and preserves trailing spaces at each line's end.
 .Pp
 .Fl S
 and
