Unzoom on last-pane and fix a typo, from Romain Francoise.

--- a/tmux.1
+++ b/tmux.1
@@ -1619,7 +1619,7 @@ is given in lines or cells (the default is 1).
 .Pp
 With
 .Fl Z ,
-the active pane is toggled between occupying the whole of the window and it's
+the active pane is toggled between occupying the whole of the window and its
 normal position in the layout.
 .It Xo Ic respawn-pane
 .Op Fl k
