Don't add prefix to %output pane id.

--- a/tmux.1
+++ b/tmux.1
@@ -3669,10 +3669,8 @@ The layout of a window with ID
 changed.
 The new layout is
 .Ar window-layout .
-.It Ic %output Ar source-pane Ar value
-A window pane,
-.Ar source-pane ,
-produced output.
+.It Ic %output Ar pane-id Ar value
+A window pane produced output.
 .Ar value
 contains that output with each byte encoded as two hex digits.
 .It Ic %session-changed Ar session-id Ar name
