tweak previous; ok nicm

--- a/tmux.1
+++ b/tmux.1
@@ -1155,7 +1155,7 @@ By default, the tree is collapsed and sessions must be expanded to windows
 with the right arrow key.
 The
 .Fl u
-will start with all all sessions expanded instead.
+option will start with all sessions expanded instead.
 .Pp
 If
 .Fl b
@@ -1946,8 +1946,8 @@ command.
 .Nm
 also supports user options which are prefixed with a
 .Ql \&@ .
-User options may have any name, so long as it is prefixed with
-.Ql \&@,
+User options may have any name, so long as they are prefixed with
+.Ql \&@ ,
 and be set to any string.
 For example
 .Bd -literal -offset indent
