Couple of fixes pointed out by jmc.

--- a/tmux.1
+++ b/tmux.1
@@ -912,7 +912,7 @@ command and keys modified or removed with
 .Ic bind-key
 and
 .Ic unbind-key .
-One command in accepts an argument,
+One command accepts an argument,
 .Ic copy-pipe ,
 which copies the selection and pipes it to a command.
 For example the following will bind
@@ -1066,7 +1066,7 @@ If
 is given, the output includes escape sequences for text and background
 attributes.
 .Fl C
-also escapes non-printable characters as octal \\xxx.
+also escapes non-printable characters as octal \exxx.
 .Fl J
 joins wrapped lines.
 .Pp
